# c2rust

./: .gitignore  Cargo.toml  README.md  ast.json  clang_gen_ast.sh  test.S.cpp  test.cpp
cpp-ast/: Cargo.toml
cpp-ast/src/: ast.rs  lib.rs  transpiler.rs  types.rs  utils.rs
llm/: README.md  code_interpreter.py  main.py  models.py  requirements.txt  run.sh  web.py
rust-ast/: Cargo.toml
rust-ast/src/: lib.rs  var.rs
src/: main.rs
src/llm/: chatgpt.rs  code_interpreter.rs  mod.rs
src/transpiler/: chatgpt.rs  code_interpreter.rs  mod.rs
test_cases/: heap_safe.cpp  inherit.cpp  macros.cpp  thread_safe.cpp  va_params.cpp  weak_ptr.cpp
