[package]
name = "c2rust"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
