[package]
name = "c2rust"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
syn = { version = "2.0.52", features = ["full", "extra-traits"] }

[workspace]
members = [
    "cpp-ast",
]
